--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="divider-custom-line"></div>
             </div>
             <!-- Masthead Subheading-->
-            <p class="masthead-subheading font-weight-light mb-0">arma.glz@outlook.com</p>
+            <a href="mailto:arma.glz@outlook.com" style="font-size:25px; color:#003049">arma.glz@outlook.com</a>
             <div class="text-center mt-4">
                 <a class="btn btn-xl btn-outline-light"
                     href="https://1drv.ms/b/s!Aj2sWGnKBNCNgQjm-vx3m-DIX8Q1?e=xirfN8"><i
@@ -169,23 +169,28 @@
             <!-- About Section Content-->
             <div class="row">
                 <div class="col-lg-4 ml-auto">
-                    <p class="lead">Hi am Armando Gonzalez a Computer Science student at the University of Texas
+                    <p class="lead">Hi am Armando Gonzalez a software developer graduate from The University of Texas
                         Rio
                         Grande
-                        Valley </p>
+                        Valley with a bachelors' degree on computer sience</p>
                 </div>
                 <div class="col-lg-4 mr-auto">
-                    <p class="lead">Hola soy Armando Gonzalez estudio Ciencias de la computacion en la "University of
+                    <p class="lead">Hola soy Armando Gonzalez un desarrollador de software graduado de la "University of
                         Texas
                         Rio
                         Grande
-                        Valley"</p>
+                        Valley" con una licenciatura en ciencias de la computacion</p>
                 </div>
             </div>
             <!-- About Section Button-->
             <div class="text-center mt-4">
-                <a class="btn btn-xl btn-outline-light" href="https://1drv.ms/b/s!Aj2sWGnKBNCNf5iLIw_8qKtmlnc"><i
+                <a class="btn btn-xl btn-outline-light"
+                    href="https://1drv.ms/b/s!Aj2sWGnKBNCNgQjm-vx3m-DIX8Q1?e=xirfN8"><i
                         class="fas fa-download mr-2"></i>Resume</a>
+            </div>
+            <div class="text-center mt-4">
+                <a href="https://www.linkedin.com/in/armaglz/" target="_blank" rel="noopener noreferrer"
+                    style="width:50px;height:100px;"><img src="assets/img/portfolio/linkedin-3-xxl.png"></a>
             </div>
         </div>
     </section>
