--- a/index.html
+++ b/index.html
@@ -294,7 +294,8 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title-->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Anti Dichromatic
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Tower Defense
+                                    prototype
                                 </h2>
                                 <!-- Icon Divider-->
                                 <div class="divider-custom">
@@ -340,7 +341,7 @@
 
                                 <p class="mb-5">
 
-                                    This project is a small Towe Defense prototype made in Unity using C# for Windows
+                                    This project is a small Tower Defense prototype made in Unity using C# for Windows
                                     computers, where the player can build and upgrade two types of towers with the
                                     game
                                     currency. The towers automatically
