--- a/index.html
+++ b/index.html
@@ -357,6 +357,10 @@
                                 </p>
                                 <button class="btn btn-primary"
                                     onclick="window.location.href ='https://1drv.ms/u/s!Aj2sWGnKBNCNgQGYPn-I0jk1jH69?e=hJOvbd';"><i></i>Download</button>
+                                <button class="btn btn-primary"
+                                    onclick="window.location.href ='https://www.newgrounds.com/portal/view/764701?updated=1599078975';"><i></i>Play
+                                    Low Spect
+                                </button>
                                 <!-- <button class="btn btn-primary" href="#" data-dismiss="modal"><i
                                         class="fas fa-times fa-fw"></i>Close Window</button> -->
                             </div>
