--- a/index.html
+++ b/index.html
@@ -217,8 +217,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title-->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Tower Defense
-                                    prototype
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Opinion Box
                                 </h2>
                                 <!-- Icon Divider-->
                                 <div class="divider-custom">
