--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
                 <div class="divider-custom-line"></div>
             </div>
             <!-- Masthead Subheading-->
-            <a href="mailto:arma.glz@outlook.com" style="font-size:25px; color:#003049">arma.glz@outlook.com</a>
+            <!-- <a href="mailto:arma.glz@outlook.com" style="font-size:25px; color:#003049">arma.glz@outlook.com</a>
             <div class="text-center mt-4">
                 <a class="btn btn-xl btn-outline-light"
-                    href="https://1drv.ms/b/s!Aj2sWGnKBNCNgQjm-vx3m-DIX8Q1?e=xirfN8"><i
+                    href="https://1drv.ms/b/s!Aj2sWGnKBNCNgQjm-vx3m-DIX222228Q1?e=xirfN8"><i
                         class="fas fa-download mr-2"></i>Resume</a>
-            </div>
+            </div> -->
             <div class="text-center mt-4">
                 <a href="https://www.linkedin.com/in/armaglz/" target="_blank" rel="noopener noreferrer"
                     style="width:50px;height:100px;"><img src="assets/img/portfolio/linkedin-3-xxl.png"></a>
@@ -183,11 +183,11 @@
                 </div>
             </div>
             <!-- About Section Button-->
-            <div class="text-center mt-4">
+            <!-- <div class="text-center mt-4">
                 <a class="btn btn-xl btn-outline-light"
-                    href="https://1drv.ms/b/s!Aj2sWGnKBNCNgQjm-vx3m-DIX8Q1?e=xirfN8"><i
+                    href="https://1drv.ms/b/s!Aj2sWGnKBNCNgQjm-vx3m-DIX8Q1?e=xjjjjjjirfN8"><i
                         class="fas fa-download mr-2"></i>Resume</a>
-            </div>
+            </div> -->
             <div class="text-center mt-4">
                 <a href="https://www.linkedin.com/in/armaglz/" target="_blank" rel="noopener noreferrer"
                     style="width:50px;height:100px;"><img src="assets/img/portfolio/linkedin-3-xxl.png"></a>
