--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 <div class="divider-custom-line"></div>
             </div>
             <!-- Masthead Subheading-->
-            <!-- <a href="mailto:arma.glz@outlook.com" style="font-size:25px; color:#003049">arma.glz@outlook.com</a>
-            <div class="text-center mt-4">
+            <a href="mailto:arma.glz@outlook.com" style="font-size:25px; color:#003049">arma.glz@outlook.com</a>
+            <!-- <div class="text-center mt-4">
                 <a class="btn btn-xl btn-outline-light"
                     href="https://1drv.ms/b/s!Aj2sWGnKBNCNgQjm-vx3m-DIX222228Q1?e=xirfN8"><i
                         class="fas fa-download mr-2"></i>Resume</a>
@@ -169,7 +169,7 @@
             <!-- About Section Content-->
             <div class="row">
                 <div class="col-lg-4 ml-auto">
-                    <p class="lead">Hi am Armando Gonzalez a software developer graduate from The University of Texas
+                    <p class="lead">Hi i am Armando Gonzalez a software developer graduate from The University of Texas
                         Rio
                         Grande
                         Valley with a bachelors' degree on computer sience</p>
@@ -269,7 +269,7 @@
                                     users make a virtual opinion box that can easily be shared with their
                                     clients/employees/students to receive opinions on their service. This website is
                                     looking to solve an old problem with modern solutions, bringing opinion boxes in a
-                                    virtual environment without the need for the user to have their website.
+                                    a virtual environment without the need for the user to have their website.
 
                                 </p>
                                 <button class="btn btn-primary"
@@ -307,11 +307,11 @@
                                 </div>
                                 <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5"
                                     src="assets/img/portfolio/pedT.png" alt="" /><!-- Portfolio Modal - Text-->
-                                <p class="mb-5">Pedigree visualizer was developedon Java Scriptis a tool that
-                                    helplaboratory research with multiple subject familiesto track diseaseor genotypes
-                                    betweengenerations. This softwareacceptsa format text file and generatedan
-                                    interactivepedigree tree with the given information, calculating position for each
-                                    subject on the images and avoid subject overlapping.
+                                <p class="mb-5">Pedigree visualizer was developed on JavaScript a tool that help
+                                    laboratory research with multiple subject families to track disease or genotypes
+                                    between generations. This software accepts format text file and generated an
+                                    interactive pedigree tree with the given information, calculating the position for
+                                    each subject on the images and avoid subject overlapping.
                                 </p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i
                                         class="fas fa-times fa-fw"></i>Close Window</button>
@@ -345,11 +345,11 @@
                                 </div>
                                 <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5"
                                     src="assets/img/portfolio/pedT.png" alt="" /><!-- Portfolio Modal - Text-->
-                                <p class="mb-5">Pedigree visualizer was developedon Java Scriptis a tool that
-                                    helplaboratory research with multiple subject familiesto track diseaseor genotypes
-                                    betweengenerations. This softwareacceptsa format text file and generatedan
-                                    interactivepedigree tree with the given information, calculating position for each
-                                    subject on the images and avoid subject overlapping.
+                                <p class="mb-5">Pedigree visualizer was developed on JavaScript a tool that help
+                                    laboratory research with multiple subject families to track disease or genotypes
+                                    between generations. This software accepts format text file and generated an
+                                    interactive pedigree tree with the given information, calculating the position for
+                                    each subject on the images and avoid subject overlapping.
                                 </p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i
                                         class="fas fa-times fa-fw"></i>Close Window</button>
@@ -517,8 +517,8 @@
                                     }
                                 </script>
 
-                                <p class="mb-5">“Math and Fantasy”is mobile game made with Unity using
-                                    C# for android devices, Publish on Google Play and recive updates acording to the
+                                <p class="mb-5">“Math and Fantasy” is a mobile game made with Unity using
+                                    C# for android devices, Publish on Google Play and receive updates according to the
                                     users feedback. This game is an Arcade game where
                                     the player must resolve
                                     basic math problems to get points, while different enemies appear on the screen and
