--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
             <!-- About Section Content-->
             <div class="row">
                 <div class="col-lg-4 ml-auto">
-                    <p class="lead">Hi i am Armando Gonzalez a software developer graduate from The University of Texas
+                    <p class="lead">Hi I am Armando Gonzalez a software developer graduate from The University of Texas
                         Rio
                         Grande
-                        Valley with a bachelors' degree on computer sience</p>
+                        Valley with a bachelors' degree on Computer Science</p>
                 </div>
                 <div class="col-lg-4 mr-auto">
                     <p class="lead">Hola soy Armando Gonzalez un desarrollador de software graduado de la "University of
@@ -430,7 +430,7 @@
                                     computers, where the player can build and upgrade two types of towers with the
                                     game
                                     currency. The towers automatically
-                                    attack wawes of three types of enemies that will try to attack the player power
+                                    attack waves of three types of enemies that will try to attack the player power
                                     core.
 
                                 </p>
@@ -604,9 +604,9 @@
 
                                 <p class="mb-5">
 
-                                    Anti Dichromatic is video game develop in Unity Using C#. This game is a Top
+                                    Anti-Dichromatic is video game develop in Unity Using C#. This game is a Top
                                     Down
-                                    shotter with minigames.
+                                    shooter with minigames.
                                     In Anti Dichromatic an alien spaceship com to a little town and black shade all
                                     of
                                     it. The player objective is explore the town and clear a mini game for each main
